More code cleaning.