@@ -1,8 +1,6 @@
 package io.github.hengyunabc.zabbix.sender;
 
 import java.time.Instant;
-import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.Map;
 
 import lombok.Builder;
@@ -21,14 +19,12 @@ public class DataObject {
     @Getter
     private final String value;
 
-    public Object getContent() {
-        Map<String, Object> content = new LinkedHashMap<>();
-        content.put("host", host);
-        content.put("key", key);
-        content.put("value", value);
-        content.put("clock", clock.getEpochSecond());
-        content.put("ns", clock.getNano());
-        return Collections.unmodifiableMap(content);
+    public Object getJsonObject() {
+        return Map.of("host", host,
+                      "key", key,
+                      "value", value,
+                      "clock", clock.getEpochSecond(),
+                      "ns", clock.getNano());
     }
 
 }
